# citation-langserver

./: .gitignore  LICENSE  README.md  pyproject.toml
citation_langserver/: __main__.py  bibliography.py  cli.py  completion.py  document.py  find_key.py  format.py  server.py
tests/: test_citation_langserver.py
