[tool.poetry]
name = "citation-langserver"
version = "0.1.0"
description = ""
authors = ["oncomouse <oncomouse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
pygls = "^0.9.0"
bibparse = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
jedi-language-server = 'citation_langserver.cli:cli'
