[tool.poetry]
name = "citation-langserver"
version = "0.1.1"
description = "A language server for managing citations stored in BibTeX and BibLaTeX files."
license = "MIT"
authors = ["oncomouse <oncomouse@gmail.com>"]
homepage = "https://github.com/oncomouse/citation-langserver"
repository = "https://github.com/oncomouse/citation-langserver"
readme = "README.md"
classifiers = [
  "Topic :: Text Editors",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Topic :: Text Editors :: Text Processing",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing :: Markup :: Markdown"
]
include = [
  "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.5"
pygls = "^0.9.0"
bibparse = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.8.3"

[tool.poetry.scripts]
citation-langserver = 'citation_langserver.cli:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

